# coding_assistant

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  TODO.md  justfile  master_maintenance_report.md  output.txt  plan.md  pyproject.toml  run.fish  source_stats_report.md  temp_check.txt  test_mcp_config.py  test_mypy.py
.agent/: TODO.md
.agent/plans/: 2026-03-18-runtime-refactor.md  2026-03-21-lightweight-runtime-surface.md  2026-03-21-mode-transport-independent-core.md  2026-03-22-runtime-slimming.md  2026-03-24-single-function-embedding.md  2026-03-26-module-simplification.md  2026-03-27-agent-boundary-api.md
.forgejo/workflows/: ci.yml
develop/: SKILL.md
docs/: embed.md  sandboxing.md
scripts/: ci.sh
skills/: SKILL.md
src/coding_assistant/: __init__.py  agent.py  agent_types.py  callbacks.py  cli.py  config.py  default_instructions.md  defaults.py  history.py  history_manager.py  history_store.py  instructions.py  interrupts.py  main.py  parameters.py  paths.py  runner.py  sandbox.py  session.py  skills.py  tool_policy.py  tool_results.py  trace.py  ui.py
src/coding_assistant/actors/: base.py  observer.py  orchestrator.py  system.py  tool_worker.py  ui_bridge.py  ui_gateway.py
src/coding_assistant/actors/tests/: test_infra.py  test_multi_agent.py  test_orchestrator.py  test_tool_worker_integration.py  test_ui_gateway.py
src/coding_assistant/adapters/: __init__.py  cli.py  websocket.py
src/coding_assistant/agents/: agent.py  callbacks.py  chat.py  execution.py  history.py  types.py
src/coding_assistant/agents/tests/: helpers.py  test_agents.py  test_callbacks_integration.py  test_chat_loop_interrupts.py  test_chat_mode.py  test_execution.py  test_execution_compact_conversation.py  test_model_contract.py  test_run_loop_slices.py  test_vision.py
src/coding_assistant/api/: bridge.py  manager.py  models.py  server.py
src/coding_assistant/api/tests/: test_bridge.py  test_e2e.py  test_manager.py  test_server.py
src/coding_assistant/app/: cli.py  default_agent.py  default_instructions.md  image.py  instructions.py  main.py  output.py  session_app.py  session_control.py  session_host.py  session_runtime.py  terminal_ui.py  ui.py  worker.py  worker_session.py
src/coding_assistant/app/tests/: test_image.py  test_instructions.py  test_main.py  test_output.py  test_sandbox.py  test_session_app_runtime.py  test_session_host.py  test_session_runtime.py  test_ui.py  test_worker.py
src/coding_assistant/builtin/instructions/: global.md  tools.md
src/coding_assistant/core/: agent.py  agent_session.py  boundaries.py  builtin_tools.py  history.py  tool_calls.py  tool_policy.py
src/coding_assistant/core/tests/: test_agent.py  test_agent_session.py  test_history.py  test_redirect_tool_call.py  test_tool_policy.py
src/coding_assistant/framework/: actor_directory.py  actor_runtime.py  agent.py  builtin_tools.py  callbacks.py  chat.py  execution.py  history.py  image.py  interrupts.py  models.py  parameters.py  results.py  system_actors.py  tool_executor.py  types.py
src/coding_assistant/framework/actors/: __init__.py
src/coding_assistant/framework/tests/: conftest.py  helpers.py  test_actor_integration.py  test_actor_runtime.py  test_agent_loop.py  test_agent_protocol.py  test_agents.py  test_callbacks_integration.py  test_chat_loop_interrupts.py  test_chat_mode.py  test_execution.py  test_execution_compact_conversation.py  test_image.py  test_interrupts.py  test_keyboard_interrupt.py  test_keyboard_interrupt_exit.py  test_llm_actor.py  test_model_contract.py  test_parameters.py  test_run_loop_slices.py  test_tool_execution.py  test_ui_actor.py  test_vision.py
src/coding_assistant/infra/: paths.py  trace.py
src/coding_assistant/infra/tests/: test_paths.py  test_trace.py
src/coding_assistant/integrations/: mcp_client.py
src/coding_assistant/integrations/tests/: test_mcp.py  test_mcp_connection.py  test_mcp_wrapped_tool.py
src/coding_assistant/llm/: adapters.py  custom.py  factory.py  litellm.py  model.py  openai.py  test_openai.py  types.py
src/coding_assistant/llm/tests/: test_adapters.py  test_openai.py
src/coding_assistant/mcp/: filesystem.py  main.py  proc.py  python.py  shell.py  skills.py  tasks.py  todo.py  utils.py
src/coding_assistant/mcp/tests/: test_filesystem.py  test_proc.py  test_python.py  test_python_mcp.py  test_shell.py  test_skills.py  test_tasks.py  test_todo.py
src/coding_assistant/messaging/: envelopes.py  messages.py  ui_messages.py
src/coding_assistant/messaging/tests/: test_protocol.py
src/coding_assistant/remote/: __init__.py  acp.py  client.py  discovery.py  protocol.py  registry.py  server.py  worker.py  worker_session.py
src/coding_assistant/remote/tests/: test_registry.py  test_worker.py
src/coding_assistant/runtime/: __init__.py  builtin_tools.py  engine.py  events.py  history.py  session.py  tool_spec.py
src/coding_assistant/skills/advanced-tool-usage/: SKILL.md
src/coding_assistant/tests/: test_adapters.py  test_agent.py  test_builtin_skills.py  test_callbacks_confirmation.py  test_completer_integration.py  test_custom_completer.py  test_dense_callbacks.py  test_dense_callbacks_formatting.py  test_history.py  test_history_manager.py  test_image.py  test_instructions.py  test_interrupts.py  test_llm_model.py  test_llm_retry.py  test_main.py  test_mcp.py  test_mcp_aggregator.py  test_mcp_connection.py  test_mcp_manager.py  test_mcp_wrapped_tool.py  test_openai_completer.py  test_paragraph_buffer.py  test_parameters.py  test_paths.py  test_redirect_tool_call.py  test_runner.py  test_sandbox.py  test_session.py  test_skills_parsing.py  test_tool_policy.py  test_trace.py  test_ui.py  test_websocket_adapter.py
src/coding_assistant/tools/: __init__.py  base.py  builtin.py  filesystem.py  local_bundle.py  managed.py  mcp.py  mcp_manager.py  mcp_server.py  mcp_tools.py  process.py  python.py  remote.py  shell.py  skills.py  tasks.py  todo.py  tools.py  workers.py
src/coding_assistant_mcp/: __main__.py
test_skills/first-skill/: SKILL.md
test_skills/second-skill/: SKILL.md
(+54 files in other folders)
