[project]
name = "coding-assistant-cli"
version = "0.1.8"
description = "An agent-orchestrated CLI for streamlining and automating coding tasks."
readme = "README.md"
authors = []
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "rich",
    "requests",
    "landlock",
    "pydantic",
    "debugpy",
    "prompt-toolkit",
    "fastmcp",
    "dacite",
    "json5",
    "httpx",
    "httpx-sse",
    "aiofiles",
    "python-frontmatter",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "mypy",
    "ruff",
    "types-requests",
    "types-aiofiles",
    "pytest-cov",
]

[tool.uv.sources]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[project.scripts]
coding-assistant = "coding_assistant.main:main"
coding-assistant-cli = "coding_assistant.main:main"
coding-assistant-mcp = "coding_assistant.mcp.main:main"
sandbox = "coding_assistant.sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "*.jpg",
  "*.png",
  "*.pdf",
  "*.jpeg",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coding_assistant"]
exclude = [
  "*.jpg",
  "*.png",
  "*.pdf",
  "*.jpeg",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
]
