[project]
name = "coding-assistant-cli"
version = "0.1.8"
description = "An agent-orchestrated CLI for streamlining and automating coding tasks."
readme = "README.md"
authors = []
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "rich",
    "requests",
    "landlock",
    "pydantic",
    "debugpy",
    "prompt-toolkit",
    "fastmcp",
    "dacite",
    "json5",
    "httpx",
    "httpx-sse",
    "aiofiles",
    "python-frontmatter",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "mypy",
    "ruff",
    "types-requests",
    "types-aiofiles",
    "pytest-cov",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "coding_assistant.framework.builtin_tools",
    "coding_assistant.framework.callbacks",
    "coding_assistant.framework.chat",
    "coding_assistant.framework.execution",
    "coding_assistant.framework.history",
    "coding_assistant.framework.interrupts",
    "coding_assistant.framework.parameters",
    "coding_assistant.framework.tests.helpers",
    "coding_assistant.framework.tests.test_agents",
    "coding_assistant.framework.tests.test_callbacks_integration",
    "coding_assistant.framework.tests.test_chat_loop_interrupts",
    "coding_assistant.framework.tests.test_chat_mode",
    "coding_assistant.framework.tests.test_execution",
    "coding_assistant.framework.tests.test_execution_compact_conversation",
    "coding_assistant.framework.tests.test_interrupts",
    "coding_assistant.framework.tests.test_keyboard_interrupt_exit",
    "coding_assistant.framework.tests.test_model_contract",
    "coding_assistant.framework.tests.test_parameters",
    "coding_assistant.framework.tests.test_run_loop_slices",
    "coding_assistant.framework.tests.test_vision",
    "coding_assistant.framework.types",
    "coding_assistant.llm.adapters",
    "coding_assistant.llm.openai",
    "coding_assistant.llm.test_openai",
    "coding_assistant.mcp",
    "coding_assistant.mcp.__main__",
    "coding_assistant.mcp.filesystem",
    "coding_assistant.mcp.main",
    "coding_assistant.mcp.proc",
    "coding_assistant.mcp.python",
    "coding_assistant.mcp.shell",
    "coding_assistant.mcp.skills",
    "coding_assistant.mcp.tasks",
    "coding_assistant.mcp.tests",
    "coding_assistant.mcp.tests.test_filesystem",
    "coding_assistant.mcp.tests.test_proc",
    "coding_assistant.mcp.tests.test_python",
    "coding_assistant.mcp.tests.test_python_mcp",
    "coding_assistant.mcp.tests.test_shell",
    "coding_assistant.mcp.tests.test_skills",
    "coding_assistant.mcp.tests.test_tasks",
    "coding_assistant.mcp.tests.test_todo",
    "coding_assistant.mcp.todo",
    "coding_assistant.mcp.utils",
    "coding_assistant.tests.test_adapters",
    "coding_assistant.tests.test_callbacks_confirmation",
    "coding_assistant.tests.test_dense_callbacks",
    "coding_assistant.tests.test_history",
    "coding_assistant.tests.test_instructions",
    "coding_assistant.tests.test_main",
    "coding_assistant.tests.test_mcp",
    "coding_assistant.tests.test_mcp_aggregator",
    "coding_assistant.tests.test_mcp_connection",
    "coding_assistant.tests.test_mcp_wrapped_tool",
    "coding_assistant.tests.test_paragraph_buffer",
    "coding_assistant.tests.test_paths",
    "coding_assistant.tests.test_sandbox",
    "coding_assistant.tests.test_trace",
    "coding_assistant.tests.test_ui",
]
ignore_errors = true

[tool.uv.sources]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[project.scripts]
coding-assistant = "coding_assistant.main:main"
coding-assistant-cli = "coding_assistant.main:main"
coding-assistant-mcp = "coding_assistant.mcp.main:main"
sandbox = "coding_assistant.sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "*.jpg",
  "*.png",
  "*.pdf",
  "*.jpeg",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coding_assistant"]
exclude = [
  "*.jpg",
  "*.png",
  "*.pdf",
  "*.jpeg",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
]
